Opened 7 years ago
Closed 6 years ago
#14355 closed bug (fixed)
Unloading/reloading an atheroswifi device ends in vm_page_fault KDL
Reported by: | v.vill | Owned by: | waddlesplash |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Drivers/Network/atheroswifi | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #14411 | |
Platform: | All |
Description
Due to some problems with the updated wifi stack (see #14282 and #14349), sometimes wpa_supplicant or net_server crashes and then the network list becomes empty. Reopening the Network preferences window, selecting the wifi adapter and clicking on "Disable" then "Enable", sometimes makes the card available again. But nearly one time out of two or three attemps, it triggers a vm_page_fault KDL instead (see attached).
I'm running hrev 52205 x86_64 with an AR9565 wifi chip.
Attachments (2)
Change History (12)
by , 7 years ago
Attachment: | IMG_20180813_221010.jpg added |
---|
comment:1 by , 7 years ago
Empty network list is not new, happend frequently with the old wlan drivers too. I think it is the wlan-supplicant. But it never KDL'd for me.
comment:2 by , 7 years ago
Component: | - General → Drivers/Network/atheroswifi |
---|---|
Owner: | changed from | to
comment:3 by , 6 years ago
Please try again after hrev52288 (and your other WiFi-related tickets also.)
If it still occurs, please run threads 1
at the KDL prompt and include the output of that here.
comment:5 by , 6 years ago
Darn. It appears this problem is now even more easily triggered than I thought. I opened a new ticket just in case (sorry for the noise if it wasn’t relevant); see #14411.
comment:6 by , 6 years ago
Blocking: | 14411 added |
---|
comment:7 by , 6 years ago
OK, so, ath_reset_grablock just calls "pause", which is defined as a macro here. _pause then calls tsleep, also a macro, which calls msleep but with a NULL mutex. msleep apparently tries to unconditionally lock or unlock the mutex, which seems pretty strange. I need to look at what FreeBSD does here.
comment:9 by , 6 years ago
OK, we seem to be getting somewhere. I couldn't trigger the KDL anymore, no matter how hard I tried! This appears to be fixed (unfortunately it still leaves me with #14349, see my update there). Let me now if there's any additional steps I can take to verify further.
Kudos!
KDL photo