src/libs/compat/freebsd11_network/systm.c
@@ -5,6 +5,15 @@
 
 
 #include <compat/sys/systm.h>
+#include <compat/sys/kernel.h>
+
+
+int
+_pause(const char* waitMessage, int timeout)
+{
+	KASSERT(timeout != 0, ("pause: timeout required"));
+	return snooze(ticks_to_usecs(timeout));
+}
 
 
 void
